fixing scrollbar desktop styles and sass implementation.

--- a/sass/desktopPortraitStyle.scss
+++ b/sass/desktopPortraitStyle.scss
@@ -34,6 +34,22 @@ h1{
     margin-bottom:20px;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+} /* this targets the default scrollbar (compulsory) */
+::-webkit-scrollbar-track {
+    background-color: transparent;
+} /* the new scrollbar will have a flat appearance with the set background color */
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(225, 225, 225, 0.6); 
+border-radius: 10px;
+} /* this will style the thumb, ignoring the track */
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
 /* ================================================= */
 /* HEADER STYLE */
 /* ================================================= */
@@ -115,7 +131,8 @@ h1{
 #aboutText p{
     text-align:center;
     font-size:1.4em;
-    color:white;  
+    color:white;
+    padding:15px;  
 }
 
 /* ================================================= */
