--- a/sass/desktopStyle.scss
+++ b/sass/desktopStyle.scss
@@ -12,6 +12,22 @@ html, body{
     padding:0;    
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+} /* this targets the default scrollbar (compulsory) */
+::-webkit-scrollbar-track {
+    background-color: transparent;
+} /* the new scrollbar will have a flat appearance with the set background color */
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(225, 225, 225, 0.6); 
+border-radius: 10px;
+} /* this will style the thumb, ignoring the track */
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
 /* ================================================= */
 /* HEADER STYLE */
 /* ================================================= */
@@ -129,6 +145,7 @@ h1{
     text-align:center;
     color:white; 
     font-size:1.4em;
+    padding:15px;
 }
 /* ================================================= */
 /* CONTACT BODY STYLE */
